java 11 fixes